Changing name of project to fit github name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "color_flowers",
+  "name": "irreversible",
   "version": "1.0.0",
   "description": "> Some art code :joy:",
   "main": "index.js",
